clusters/monitoring-cluster/production/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring-new
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "grafana-monitoring-ip"
    networking.gke.io/managed-certificates: "grafana-ssl-cert"
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
  - host: grafana-logcomex.34-8-167-169.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
